Add clust analysis as CL script. Fix typo for min_clust_size arg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,3 +52,4 @@ packages = ["src/smlm_clust_analysis"]
 [project.scripts]
 analyze-coloc = "smlm_clust_analysis.two_colour_analysis:main"
 detect-clusters = "smlm_clust_analysis.clust_detection:main"
+analyze-clusters = "smlm_clust_analysis.clust_analysis:main"
